--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
 </head>
 
 <body>
+    <header>
      <h1>Centro Educativo y Técnico Laboral KINAL</h1>
+    </header>
 
-     <br/>
+    <nav>
 
-     <p>60 años</p>
+    </nav>
+
+    
+<main>
+    <section>
+        <p>60 años</p>
+        <br>
+    </section>
+</main>
+<footer>
+    <p>Todos los derechos reservados (c) Brayan Rodriguez</p>
+</footer> 
 </body>
-
 </html>
